fix: add style rule to fix button spacing on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -57,3 +57,10 @@ footer {
     max-height: 400px;
     margin: auto;
 }
+
+/* button style rule */
+@media (max-width: 600px) {
+    .btn-large {
+        margin-top: 10px;
+    }
+}
